# ComputerEngineeringRecap

./: .gitignore  COMMIT_WORKFLOW.md  LICENSE  README.md
MainProgram/: .gitignore  CMakeLists.txt
MainProgram/include/apps/cpu_tlp_shared_cache/: CpuTLPControlAPI.h  CpuTLPSharedCacheState.h  tlp_debug.h
MainProgram/include/apps/cpu_tomasulo/: CpuTomasuloState.h
MainProgram/include/apps/cpu_tomasulo/simulation/: PipelineTracker.h  TomasuloCPU.h  TomasuloSimController.h
MainProgram/include/apps/quicksort_visualizer/: QuicksortVisualizerState.h
MainProgram/include/apps/quicksort_visualizer/algorithm/: QuicksortAlgorithm.h
MainProgram/include/apps/quicksort_visualizer/animation/: SwapAnimator.h
MainProgram/include/apps/quicksort_visualizer/audio/: SwapSoundGenerator.h
MainProgram/include/apps/quicksort_visualizer/data/: ElementCollection.h  SortElement.h  SwapOperation.h  SwapQueue.h
MainProgram/include/apps/quicksort_visualizer/input/: GridInputHandler.h
MainProgram/include/apps/quicksort_visualizer/threading/: LogicThreadController.h
MainProgram/include/apps/quicksort_visualizer/ui/: AmountInputPopup.h  ControlPanel.h  ElementRenderer.h  GridPanel.h
MainProgram/include/apps/quicksort_visualizer/visualization/: GridConfig.h  GridTransform.h
MainProgram/include/core/: Application.h
MainProgram/include/core/config/: ConfigManager.h
MainProgram/include/core/fsm/: IState.h  State.h  StateManager.h
MainProgram/include/core/resources/: TextureCache.h
MainProgram/include/cuda/: CudaTest.cuh
MainProgram/include/programs/cpu_tlp_shared_cache/: CpuTLPSharedCacheState.h  tlp_debug.h
MainProgram/include/programs/cpu_tlp_shared_cache/components/: Assembler.h  InstructionMemoryComponent.h  PE0Component.h  PE1Component.h  PE2Component.h  PE3Component.h  SharedMemoryComponent.h
MainProgram/include/programs/cpu_tlp_shared_cache/views/: PE0MemView.h  PE1MemView.h  PE2MemView.h  PE3MemView.h  RAMView.h
MainProgram/include/states/: MainMenuState.h  ProgramState.h
MainProgram/include/systems/audio/: AudioManager.h
MainProgram/include/ui/overlays/: SettingsOverlay.h
MainProgram/include/ui/overlays/panels/: AudioSettingsPanel.h  CreditsPanel.h  VideoSettingsPanel.h
MainProgram/include/util/: errorReporting.h
MainProgram/include/util/gl_debug/: GLDebugCallback.h  GLDebugFilter.h  GLDebugFormatter.h  GLDebugOutput.h
MainProgram/resources/: config.json
MainProgram/resources/Assets/CPU_TLP/: TempSource.txt
MainProgram/resources/Assets/CPU_TLP/CodeExamples/: 00LDRGeneralTest.txt  01STRGeneralTest.txt  03MESI.txt  06_SUB&CMPI.txt  10_FCMPS&BUN.txt  11_FCMPS&BORD.txt  12_AND.txt  13_MULI.txt  15_FMUL.txt  16_FMULI.txt  18_FABSI.txt  19_MOV.txt  20_FCMP.txt  23_STR_extra.txt  24_LDR.txt
MainProgram/resources/Assets/CPU_TLP/EjemplosDeCodigos/: 00EJEMPLOLDR.txt  01EJEMPLOSTR.txt  02CODIGOPRINCIPAL.txt  03TESTMESI.txt  04TESTCACHESETS.txt  Ejemplo1.txt  Ejemplo10.txt  Ejemplo11.txt  Ejemplo12.txt  Ejemplo13.txt  Ejemplo14.txt  Ejemplo15.txt  Ejemplo16.txt  Ejemplo17.txt  Ejemplo18.txt  Ejemplo19.txt  Ejemplo2.txt  Ejemplo20.txt  Ejemplo21.txt  Ejemplo22.txt  Ejemplo23.txt  Ejemplo24.txt  Ejemplo3.txt  Ejemplo4.txt  Ejemplo5.txt  Ejemplo6.txt  Ejemplo7.txt  Ejemplo8.txt  Ejemplo9.txt
MainProgram/resources/Assets/CPU_TOMASULO/CodeExamples/: 00GeneralTest.txt  01EspecializedTest.txt  02LDR&STR_Tests.txt  02MainTestCode.txt  03DCacheTest.txt  04CacheSets.txt  04MainTestCode.txt  05StreesTestCode.txt  05_ADD&CMPI.txt  07_ASRI&TEQI.txt  08_BLT.txt  09_BGT.txt  14_INC.txt  17_FSQRT.txt  21_FCMPI.txt  22_STR.txt  25_LDR_extra.txt
MainProgram/resources/Assets/CPU_TOMASULO/DiagramVersions/: TomasuloComponentLogicSpecification.md  TomasuloWiring.md  tomasulo_v3_cables.md  tomasulo_v3_complete_logic.md
MainProgram/src/: main.cpp
MainProgram/src/apps/cpu_tlp_shared_cache/: CpuTLPSharedCacheState.cpp  CpuTLPStateFactory.cpp  factory.cpp
MainProgram/src/apps/cpu_tomasulo/: CpuTomasuloState.cpp  CpuTomasuloStateFactory.cpp
MainProgram/src/apps/cpu_tomasulo/simulation/: TomasuloCPU.cpp  TomasuloSimController.cpp
MainProgram/src/apps/quicksort_visualizer/: QuicksortVisualizerState.cpp  QuicksortVisualizerStateFactory.cpp
MainProgram/src/apps/quicksort_visualizer/algorithm/: QuicksortAlgorithm.cpp
MainProgram/src/apps/quicksort_visualizer/animation/: SwapAnimator.cpp
MainProgram/src/apps/quicksort_visualizer/audio/: SwapSoundGenerator.cpp
MainProgram/src/apps/quicksort_visualizer/data/: ElementCollection.cpp  SwapQueue.cpp
MainProgram/src/apps/quicksort_visualizer/input/: GridInputHandler.cpp
MainProgram/src/apps/quicksort_visualizer/threading/: LogicThreadController.cpp
MainProgram/src/apps/quicksort_visualizer/ui/: AmountInputPopup.cpp  ControlPanel.cpp  ElementRenderer.cpp  GridPanel.cpp
MainProgram/src/apps/quicksort_visualizer/visualization/: GridTransform.cpp
MainProgram/src/core/: Application.cpp
MainProgram/src/core/config/: ConfigManager.cpp
MainProgram/src/core/fsm/: State.cpp  StateManager.cpp
MainProgram/src/core/resources/: TextureCache.cpp
MainProgram/src/cuda/: CudaTest.cu
MainProgram/src/programs/cpu_tlp_shared_cache/: CpuTLPSharedCacheState.cpp
MainProgram/src/programs/cpu_tlp_shared_cache/components/: Assembler.cpp  InstructionMemoryComponent.cpp  PE0Component.cpp  PE1Component.cpp  PE2Component.cpp  PE3Component.cpp  SharedMemory.cpp  SharedMemoryComponent.cpp
MainProgram/src/programs/cpu_tlp_shared_cache/views/: CompilerView.cpp  GeneralView.cpp  PE0MemView.cpp  PE1MemView.cpp  PE2MemView.cpp  PE3MemView.cpp  RAMView.cpp
MainProgram/src/programs/cpu_tlp_shared_cache/widgets/: CacheMemTable.cpp  RamTable.cpp
MainProgram/src/states/: MainMenuState.cpp  ProgramState.cpp
MainProgram/src/systems/audio/: AudioManager.cpp
MainProgram/src/ui/overlays/: SettingsOverlay.cpp
MainProgram/src/ui/overlays/panels/: AudioSettingsPanel.cpp  CreditsPanel.cpp  VideoSettingsPanel.cpp
MainProgram/src/util/gl_debug/: GLDebugCallback.cpp  GLDebugFilter.cpp  GLDebugFormatter.cpp  GLDebugOutput.cpp
(+622 files in other folders)
